--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                         </div>
                         <div class="texts">
                             <h2>Neymar Jr</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus
-                                sed
-                                id
-                                nisi lectus at.</p>
+                            <p>Neymar Jr is a Brazilian professional footballer who plays in the Brazil national team.
+                                He is widely regarded as
+                                one of the best players in the world
+                            </p>
                         </div>
                     </div>
                 </article>
@@ -51,10 +51,8 @@
                         </div>
                         <div class="texts">
                             <h2>Lionel Messi</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus
-                                sed
-                                id
-                                nisi lectus at.</p>
+                            <p>Lionel Messi is an Argentine professional footballer who plays as a forward or an
+                                attacking midfielder and captains the Argentina national team.</p>
                         </div>
                     </div>
                 </article>
@@ -65,10 +63,8 @@
                         </div>
                         <div class="texts">
                             <h2>Cristiano Ronaldo</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus
-                                sed
-                                id
-                                nisi lectus at.</p>
+                            <p>Cristiano Ronaldo is a Portuguese professional footballer who plays as a forward for
+                                Serie A club Juventus and captains the Portugal national team.</p>
                         </div>
                     </div>
                 </article>
@@ -79,10 +75,9 @@
                         </div>
                         <div class="texts">
                             <h2>Paulo Dybala</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus
-                                sed
-                                id
-                                nisi lectus at.</p>
+                            <p>Paulo Dybala is an Argentine professional footballer who plays as a forward for Serie A
+                                club Juventus and the Argentina national team. Dybala began his club career in
+                                2011 </p>
                         </div>
                     </div>
                 </article>
@@ -93,10 +88,9 @@
                         </div>
                         <div class="texts">
                             <h2>Mesut Ozil</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus
-                                sed
-                                id
-                                nisi lectus at.</p>
+                            <p>Mesut Ozil is a German professional footballer who plays as an attacking midfielder for
+                                Süper Lig club. Nicknamed "The Assist King" Ozil is known for his technical
+                                skills</p>
                         </div>
                     </div>
                 </article>
@@ -107,10 +101,8 @@
                         </div>
                         <div class="texts">
                             <h2>Mauro Icardi</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus
-                                sed
-                                id
-                                nisi lectus at.</p>
+                            <p>Mauro Emanuel Icardi is an Argentine professional footballer who plays as a striker for
+                                Ligue 1 club Paris Saint-Germain and the Argentina national team.</p>
                         </div>
                     </div>
                 </article>
@@ -121,10 +113,9 @@
                         </div>
                         <div class="texts">
                             <h2>Di Maria</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus
-                                sed
-                                id
-                                nisi lectus at.</p>
+                            <p>Di María is an Argentine professional footballer who plays for
+                                Paris Saint-Germain and the Argentina national team. He can play as either a winger or
+                                attacking midfielder.</p>
                         </div>
                     </div>
                 </article>
@@ -135,10 +126,8 @@
                         </div>
                         <div class="texts">
                             <h2>Kylian Mbappé</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus
-                                sed
-                                id
-                                nisi lectus at.</p>
+                            <p>Kylian Mbappé Lottin is a French professional footballer who plays as a forward for Ligue
+                                1 club Paris Saint-Germain and the France national team.</p>
                         </div>
                     </div>
                 </article>
@@ -149,10 +138,8 @@
                         </div>
                         <div class="texts">
                             <h2>Mohamed Salah</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus
-                                sed
-                                id
-                                nisi lectus at.</p>
+                            <p>Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer who plays as a
+                                forward for Premier League club Liverpool and captains the Egypt national team.</p>
                         </div>
                     </div>
                 </article>
@@ -163,10 +150,8 @@
                         </div>
                         <div class="texts">
                             <h2>Harry Kane</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus
-                                sed
-                                id
-                                nisi lectus at.</p>
+                            <p>Harry Edward Kane MBE is an English professional footballer who plays as a striker for
+                                Premier League club Tottenham Hotspur and captains the England national team.</p>
                         </div>
                     </div>
                 </article>
@@ -177,10 +162,9 @@
                         </div>
                         <div class="texts">
                             <h2>Kevin De Bruyne</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus
-                                sed
-                                id
-                                nisi lectus at.</p>
+                            <p>Kevin De Bruyne is a Belgian professional footballer who plays as a midfielder for
+                                Premier League club Manchester City and the Belgium national
+                                team.</p>
                         </div>
                     </div>
                 </article>
@@ -191,10 +175,9 @@
                         </div>
                         <div class="texts">
                             <h2>Philippe Coutinho</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus
-                                sed
-                                id
-                                nisi lectus at.</p>
+                            <p>Philippe Coutinho Correia is a Brazilian professional footballer who plays as an
+                                attacking midfielder or winger for Spanish club Barcelona and the Brazil national team.
+                            </p>
                         </div>
                     </div>
                 </article>
