--- a/index.html
+++ b/index.html
@@ -38,8 +38,6 @@
                         <div class="texts">
                             <h2>Neymar Jr</h2>
                             <p>Neymar Jr is a Brazilian professional footballer who plays in the Brazil national team.
-                                He is widely regarded as
-                                one of the best players in the world
                             </p>
                         </div>
                     </div>
@@ -63,8 +61,8 @@
                         </div>
                         <div class="texts">
                             <h2>Cristiano Ronaldo</h2>
-                            <p>Cristiano Ronaldo is a Portuguese professional footballer who plays as a forward for
-                                Serie A club Juventus and captains the Portugal national team.</p>
+                            <p>Cristiano Ronaldo is a Portuguese professional footballer who plays as a forward for the
+                                Portugal national team.</p>
                         </div>
                     </div>
                 </article>
@@ -75,9 +73,8 @@
                         </div>
                         <div class="texts">
                             <h2>Paulo Dybala</h2>
-                            <p>Paulo Dybala is an Argentine professional footballer who plays as a forward for Serie A
-                                club Juventus and the Argentina national team. Dybala began his club career in
-                                2011 </p>
+                            <p>Paulo Dybala is an Argentine professional footballer who plays as a forward for the
+                                Argentina national team. Dybala began his club career in 2011 </p>
                         </div>
                     </div>
                 </article>
@@ -89,8 +86,7 @@
                         <div class="texts">
                             <h2>Mesut Ozil</h2>
                             <p>Mesut Ozil is a German professional footballer who plays as an attacking midfielder for
-                                Süper Lig club. Nicknamed "The Assist King" Ozil is known for his technical
-                                skills</p>
+                                German. Ozil is known for his technical skills</p>
                         </div>
                     </div>
                 </article>
@@ -101,8 +97,8 @@
                         </div>
                         <div class="texts">
                             <h2>Mauro Icardi</h2>
-                            <p>Mauro Emanuel Icardi is an Argentine professional footballer who plays as a striker for
-                                Ligue 1 club Paris Saint-Germain and the Argentina national team.</p>
+                            <p>Mauro Icardi is an Argentine professional footballer who plays as a striker for the
+                                Argentina national team.</p>
                         </div>
                     </div>
                 </article>
@@ -114,8 +110,7 @@
                         <div class="texts">
                             <h2>Di Maria</h2>
                             <p>Di María is an Argentine professional footballer who plays for
-                                Paris Saint-Germain and the Argentina national team. He can play as either a winger or
-                                attacking midfielder.</p>
+                                the Argentina national team. He can play attacking midfielder.</p>
                         </div>
                     </div>
                 </article>
@@ -126,8 +121,8 @@
                         </div>
                         <div class="texts">
                             <h2>Kylian Mbappé</h2>
-                            <p>Kylian Mbappé Lottin is a French professional footballer who plays as a forward for Ligue
-                                1 club Paris Saint-Germain and the France national team.</p>
+                            <p>Kylian Mbappé is a French professional footballer who plays as a forward for the France
+                                national team.</p>
                         </div>
                     </div>
                 </article>
@@ -139,7 +134,7 @@
                         <div class="texts">
                             <h2>Mohamed Salah</h2>
                             <p>Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer who plays as a
-                                forward for Premier League club Liverpool and captains the Egypt national team.</p>
+                                captains in the Egypt national team.</p>
                         </div>
                     </div>
                 </article>
@@ -151,7 +146,7 @@
                         <div class="texts">
                             <h2>Harry Kane</h2>
                             <p>Harry Edward Kane MBE is an English professional footballer who plays as a striker for
-                                Premier League club Tottenham Hotspur and captains the England national team.</p>
+                                Tottenham and captains the England national team.</p>
                         </div>
                     </div>
                 </article>
@@ -162,8 +157,8 @@
                         </div>
                         <div class="texts">
                             <h2>Kevin De Bruyne</h2>
-                            <p>Kevin De Bruyne is a Belgian professional footballer who plays as a midfielder for
-                                Premier League club Manchester City and the Belgium national
+                            <p>Kevin De Bruyne is a Belgian professional footballer who plays as a Manchester City and
+                                the Belgium national
                                 team.</p>
                         </div>
                     </div>
@@ -175,8 +170,8 @@
                         </div>
                         <div class="texts">
                             <h2>Philippe Coutinho</h2>
-                            <p>Philippe Coutinho Correia is a Brazilian professional footballer who plays as an
-                                attacking midfielder or winger for Spanish club Barcelona and the Brazil national team.
+                            <p>Philippe Coutinho Correia is a Brazilian professional footballer who plays as the Brazil
+                                national team.
                             </p>
                         </div>
                     </div>
